Add content example

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "version": "1.0.0",
   "description": "My webpack project",
   "name": "my-webpack-project",
+  "homepage": "/journal",
   "scripts": {
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
