--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@types/react": "^18.3.3",
