--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine On
 
-RewriteCond %{DOCUMENT_ROOT}/journal/public/$1 -f
-RewriteRule ^(.*)$ public/$1 [L]
+RewriteCond %{DOCUMENT_ROOT}/journal/dist/$1 -f
+RewriteRule ^(.*)$ dist/$1 [L]
 
-RewriteCond %{THE_REQUEST} \s/journal/public/ [NC,OR]
-RewriteCond $1 !^public/
-RewriteRule ^(.*)$ public/index.php [L]
+RewriteCond %{THE_REQUEST} \s/journal/dist/ [NC,OR]
+RewriteCond $1 !^dist/
+RewriteRule ^(.*)$ dist/index.php [L]
