--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
       "name": "y"
     }
   ],
-  "require": {}
+  "require": {
+    "vlucas/phpdotenv": "^5.6",
+    "webonyx/graphql-php": "^15.14"
+  }
 }
