--- a/package.json
+++ b/package.json
@@ -1,43 +1,52 @@
 {
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "@webpack-cli/generators": "^3.0.7",
+    "@types/node": "^20.14.12",
     "autoprefixer": "^10.4.19",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.0",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.38",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.4.5"
   },
   "version": "1.0.0",
-  "description": "My webpack project",
-  "name": "my-webpack-project",
-  "homepage": "/journal",
+  "description": "TTCL Administration System",
+  "name": "ttcl-ams",
+  "homepage": "/asm",
   "scripts": {
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.1",
+    "@fontsource/ibm-plex-sans-thai": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.4",
-    "@heroicons/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
-    "highlight.js": "^11.9.0",
+    "date-fns": "^3.6.0",
+    "graphql": "^16.9.0",
+    "highlight.js": "^11.10.0",
+    "i18next": "^23.12.3",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.5"
+    "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.1",
+    "react-router-dom": "^6.25.1",
+    "vite": "^5.3.5",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "eslintConfig": {
     "extends": [
